--- a/html/index.html
+++ b/html/index.html
@@ -31,15 +31,15 @@
         plugins: [
           window.DocsifyCopyCodePlugin.init()
         ],
-        search: 'auto', 
+        search: 'auto',
 
         search: [
-          '/', 
+          '/',
           '/zh-cn/'
         ],
 
         search: {
-          maxAge: 86400000, 
+          maxAge: 86400000,
           paths: [],
           placeholder: {
             '/zh-cn/': '搜索...',
@@ -55,12 +55,12 @@
         }
       };
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/emoji.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
-    <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
-    <script src="//unpkg.com/prismjs/components/prism-kotlin.js"></script>
-    <script src="//unpkg.com/prismjs/components/prism-yaml.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/docsify.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/plugins/emoji.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/plugins/search.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-java.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-kotlin.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-yaml.min.js"></script>
   </body>
 
 </html>
