--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="//unpkg.com/docsify-copy-code/styles.css">
   <meta charset="utf-8">
   <title>Cloudopt Next</title>
   <link rel="icon" href="/images/favicon.png" type="image/png" sizes="16x16">
@@ -11,13 +10,12 @@
   <meta name="description" content="Cloudopt Next is a very lightweight micro-service framework based on kotlin and vertx for the Next generation. ">
   <meta name="keywords" content="kotlin,java,vertx,java-web,java-library,java-8,java-9,springboot,cloudopt,next,web,framework,jfinal,resty,restful-api">
   <!-- Resource style -->
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/themes/vue.css">
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
   <body>
     <div id="app"></div>
-    <script src="//unpkg.com/docsify-copy-code/index.js"></script>
     <script>
       window.$docsify = {
         name: "Cloudopt Next",
@@ -29,7 +27,6 @@
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
         ga: 'UA-101903685-1',
         plugins: [
-          window.DocsifyCopyCodePlugin.init()
         ],
         search: 'auto',
 
