--- a/html/index.html
+++ b/html/index.html
@@ -7,57 +7,73 @@
   <link rel="icon" href="/images/favicon.png" type="image/png" sizes="16x16">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Cloudopt Next is a very lightweight micro-service framework based on kotlin and vertx for the Next generation. ">
-  <meta name="keywords" content="kotlin,java,vertx,java-web,java-library,java-8,java-9,springboot,cloudopt,next,web,framework,jfinal,resty,restful-api">
+  <meta name="description"
+    content="Cloudopt Next is a very lightweight micro-service framework based on kotlin and vertx for the Next generation. ">
+  <meta name="keywords"
+    content="kotlin,java,vertx,java-web,java-library,java-8,java-9,springboot,cloudopt,next,web,framework,jfinal,resty,restful-api">
   <!-- Resource style -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/themes/vue.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-  <body>
-    <div id="app"></div>
-    <script>
-      window.$docsify = {
-        name: "Cloudopt Next",
-        loadNavbar: true,
-        loadSidebar: true,
-        subMaxLevel: 2,
-        nameLink: '/',
-        themeColor: '#3333CC',
-        formatUpdated: '{MM}/{DD} {HH}:{mm}',
-        ga: 'UA-101903685-1',
-        plugins: [
-        ],
-        search: 'auto',
+<body>
+  <div id="app"></div>
+  <script src="//unpkg.com/docsify/lib/docsify.js"></script>
+  <script>
+    window.$docsify = {
+      name: "Cloudopt Next",
+      loadNavbar: true,
+      loadSidebar: true,
+      subMaxLevel: 1,
+      nameLink: '/',
+      themeColor: '#425063',
+      formatUpdated: '{MM}/{DD} {HH}:{mm}',
+      ga: 'UA-101903685-1',
+      plugins: [],
+      search: 'auto',
 
-        search: [
-          '/',
-          '/zh-cn/'
-        ],
+      search: [
+        '/',
+        '/zh-cn/'
+      ],
 
-        search: {
-          maxAge: 86400000,
-          paths: [],
-          placeholder: {
-            '/zh-cn/': '搜索...',
-            '/': 'Search...'
-          },
+      search: {
+        maxAge: 86400000,
+        paths: [],
+        placeholder: {
+          '/zh-cn/': '搜索...',
+          '/': 'Search...'
+        },
 
-          noData: {
-            '/zh-cn/': '找不到结果',
-            '/': 'No Results'
-          },
+        noData: {
+          '/zh-cn/': '找不到结果',
+          '/': 'No Results'
+        },
 
-          depth: 6
-        }
-      };
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/docsify.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/plugins/emoji.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.6.10/plugins/search.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-java.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-kotlin.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.14.0/components/prism-yaml.min.js"></script>
-  </body>
+        depth: 6
+      },
+      tabs: {
+        persist: true,
+        sync: true,
+        theme: 'material',
+        tabComments: true,
+        tabHeadings: true
+      }
+    };
+  </script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/emoji.js"></script>c
+  <script src="//unpkg.com/docsify-copy-code"></script>
+  <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-kotlin.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+  <script>
+    if (typeof navigator.serviceWorker !== 'undefined') {
+      navigator.serviceWorker.register('sw.js')
+    }
+  </script>
+</body>
 
 </html>
