--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
       ga: 'UA-101903685-1',
       plugins: [],
       search: 'auto',
-
+      mergeNavbar: true,
       search: [
         '/',
         '/zh-cn/'
