fix: Fix a problem where the search doesn't work

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 
       search: {
         maxAge: 86400000,
-        paths: [],
+        paths: 'auto',
         placeholder: {
           '/zh-cn/': '搜索...',
           '/': 'Search...'
